checking bootstrap version and adding more fade

--- a/about.html
+++ b/about.html
@@ -66,20 +66,17 @@
     </footer>
     <!-- Optional JavaScript -->
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script>
       $(document).ready(function () {
-        $('#aboutTitle').fadeIn(1000).removeClass('hidden');
-        $('#aboutContent').fadeIn(1500).removeClass('hidden');
-        $('#musicTitle').fadeIn(1000).removeClass('hidden');
-        $('#spotifyPlayer').fadeIn(1500).removeClass('hidden');
+        $('#aboutTitle').fadeIn(1000);
+        $('#aboutContent').fadeIn(1250);
+        $('#musicTitle').fadeIn(1000);
+        $('#spotifyPlayer').fadeIn(1250);
       });
     </script>
   </body>
