--- a/index.html
+++ b/index.html
@@ -51,14 +51,24 @@
 
     <!-- Begin page content -->
     <main role="main" class="container ">
-        <h1 class="mt-5 hidden" id="intro">Hi, I'm Matthew</h1>
-        <p class="lead hidden" id="inProgressMsg">This website is still in progress, so please check back later!</p>
-        <p class="lead hidden" id="followMsg">You can follow me on <a href="https://github.com/m24murray">GitHub</a> and on <a href="https://twitter.com/m24murray">Twitter</a>
-        </p>
+      <div class="parent">
+        <div class="child3">
+          <h1 class="mt-5 hidden" id="intro">Hi, I'm Matthew</h1>
+        </div>
 
-        <i class="fa fa-code hidden" id="codeIcon"></i>
-        <i class="fa fa-code-fork hidden" id="codeForkIcon"></i>
-        <i class="fa fa-rocket hidden" id="rocketIcon"></i>
+        <div class="child2">
+          <img class="main-image" src="img/matt.jpg" width="200" height="200" ></a>
+        </div>
+
+        <div class="child1">
+          <p class="lead hidden" id="inProgressMsg">This website is still in progress, so please check back later!</p>
+          <p class="lead hidden" id="followMsg">You can follow me on <a href="https://github.com/m24murray">GitHub</a> and on <a href="https://twitter.com/m24murray">Twitter</a></p>
+
+          <i class="fa fa-code hidden" id="codeIcon"></i>
+          <i class="fa fa-code-fork hidden" id="codeForkIcon"></i>
+          <i class="fa fa-rocket hidden" id="rocketIcon"></i>
+        </div>
+      </div>
     </main>
 
     <footer class="footer">
