adding pic and responsiveness

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="child2">
-          <img class="main-image" src="img/matt.jpg" width="200" height="200" ></a>
+          <img class="main-image hidden" id="mattImg" src="img/matt.jpg" width="200" height="200" ></a>
         </div>
 
         <div class="child1">
@@ -88,6 +88,7 @@
     <script type="text/javascript">
       $(document).ready(function () {
         $('#intro').fadeIn(1000);
+        $('#mattImg').fadeIn(1250);
         $('#inProgressMsg').fadeIn(1250);
         $('#followMsg').fadeIn(1250);
         $('#codeIcon').fadeIn(1250);
