--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           <h1 class="mt-5 hidden" id="intro">Hi, I'm Matthew</h1>
         </div>
 
-        <div class="child2">
-          <img class="main-image hidden" id="mattImg" src="img/matt.jpg" width="200" height="200" ></a>
+        <div class="child2 " >
+          <img class="main-image" id="mattImg" src="img/matt.jpg" width="200" height="200" ></a>
         </div>
 
         <div class="child1">
